# HEART_DISEASE_PREDICTION-MODEL

./: .gitignore  Dockerfile  README.md  app.py  build.sh  cleaned_data.csv  heart_disease_model.pkl  heart_disease_pro.ipynb  index.html  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  scaler.pkl  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  index.css
src/components/: HeartDiseaseForm.tsx  LoginPage.tsx  RegisterPage.tsx
src/components/ui/: sidebar.tsx
src/pages/: Index.tsx
