[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heart-disease-prediction"
version = "1.0.0"
description = "Heart Disease Prediction App"
requires-python = ">=3.8,<3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "node_modules*", "dist*", "build*"] 